# Soul-Devourer-FV

./: .gitignore  proyecto.code-workspace  sobre_nosotros.md
src/pro/prot_general/: CMakeLists.txt  main.cpp
src/pro/prot_general/colisiones/: Collision.cpp  Collision.h
src/pro/prot_general/enemigo/: CMakeLists.txt  colision.cpp  colision.h  enemigo.cpp  enemigo.h  enemigo2.cpp  enemigo2.h
src/pro/prot_general/estados/controles/: CMakeLists.txt  controles.cpp  controles.h
src/pro/prot_general/estados/desarrolladores/: CMakeLists.txt  desarrolladores.cpp  desarrolladores.h
src/pro/prot_general/estados/estado/: CMakeLists.txt  estado.cpp  estado.h
src/pro/prot_general/estados/final/: CMakeLists.txt  final.cpp  final.h
src/pro/prot_general/estados/gana/: CMakeLists.txt  gana.cpp  gana.h
src/pro/prot_general/estados/mapa/: CMakeLists.txt  mapa.cpp  mapa.h
src/pro/prot_general/estados/menu/: menu.cpp  menu.h
src/pro/prot_general/estados/pausa/: CMakeLists.txt  pausa.cpp  pausa.h
src/pro/prot_general/interpolacion/: CMakeLists.txt  interpolacion.cpp  interpolacion.h
src/pro/prot_general/jefe/: CMakeLists.txt  jefe.cpp  jefe.h  jefeNPC.cpp  jefeNPC.h
src/pro/prot_general/map/: CMakeLists.txt  map.cpp  map.h
src/pro/prot_general/motor/: CMakeLists.txt  motor.cpp  motor.h
src/pro/prot_general/nivel/: CMakeLists.txt  nivel.cpp  nivel.h
src/pro/prot_general/personaje/: CMakeLists.txt  personaje.cpp  personaje.h
src/pro/prot_general/proyectil/: CMakeLists.txt  proyectil.cpp  proyectil.h
src/pro/prot_general/run/: CMakeLists.txt  run.cpp  run.h
src/pro/prot_general/runa/: CMakeLists.txt  runa.cpp  runa.h
src/pro/prot_general/tinyxml/: CMakeLists.txt
(+19 files in other folders)
